ID-3522 [FIX] Fixes date/time range overlapping in case of flexible width (#563)
* ID-3522 [FIX] Fixes date/time range overlapping in case of flexible width

* Recovered focuse-outline class for date and time pickers

* ID-3522 [FIX] Fixed responsiveness

* Moved date/time range styles from api to widget

--- a/css/builder.css
+++ b/css/builder.css
@@ -1304,3 +1304,34 @@ form hr {
     display: flex !important;
   }
 }
+
+[data-widget-package="com.fliplet.form-builder"]
+  .form-group.fl-time-picker.time-picker-start
+  > .form-control,
+[data-widget-package="com.fliplet.form-builder"]
+  .form-group.fl-time-picker.time-picker-end
+  > .form-control {
+  padding-right: 0 !important;
+}
+
+@media only screen and (max-width: 340px) {
+  [data-widget-package="com.fliplet.form-builder"]
+    .form-group.fl-date-picker.date-picker-start
+    > .form-control,
+  [data-widget-package="com.fliplet.form-builder"]
+    .form-group.fl-date-picker.date-picker-end
+    > .form-control,
+  [data-widget-package="com.fliplet.form-builder"]
+    .form-group.fl-time-picker.time-picker-start
+    > .form-control,
+  [data-widget-package="com.fliplet.form-builder"]
+    .form-group.fl-time-picker.time-picker-end
+    > .form-control {
+    padding-left: calc(35px + 5px);
+  }
+
+  .form-group.fl-date-picker > .fa,
+  .form-group.fl-time-picker > .fa {
+    width: 35px;
+  }
+}
