--- a/css/form.css
+++ b/css/form.css
@@ -1485,3 +1485,26 @@ form hr {
     display: flex !important;
   }
 }
+
+@media screen and (max-width: 360px) {
+  .form-group.w-1_2 .fl-date-range .fl-date-picker,
+  .form-group.w-3_4 .fl-date-range .fl-date-picker,
+  .form-group.w-1_2 .fl-time-range .fl-time-picker,
+  .form-group.w-3_4 .fl-time-range .fl-time-picker {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 360px) and (max-width: 431px) {
+  .form-group.w-1_2 .fl-date-range .fl-date-picker,
+  .form-group.w-1_2 .fl-time-range .fl-time-picker {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .form-group.w-1_4 .fl-date-range .fl-date-picker,
+  .form-group.w-1_4 .fl-time-range .fl-time-picker {
+    width: 100%;
+  }
+}
